logs/Slang/chapter-9/9.3.3--block_start_finish.sv.log
name: block_start_finish
description: block start finish check
should_fail: 0
tags: 9.3.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.3.3--block_start_finish.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.3.3--block_start_finish.sv:10:3: error: language feature not yet supported
		fork
		^~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.3.3--block_start_finish.sv:17:3: error: language feature not yet supported
		fork
		^~~~
